# chattyfactory

./: .gitignore  CHANGELOG.md  Cargo.toml  GLOSSARY.md  GRANT_STATUS.md  HANDSHAKE.md  LICENSE  LINEAGE.md  NLNET_CONTINUITY.md  README.md  RELIABILITY.md  ROADMAP.md  STATE_TEMPLATE.md  USER_MANUAL.md  manifest.json  state.json  ui.json  visual_load.json
bookshelf/: index.json
bookshelf/references/: actions_and_contents.json  actions_and_contents.md  apply_patch_unified_diff_quickref.json  apply_patch_unified_diff_quickref.md  common_plan_failures_no_fake_actions.json  common_plan_failures_no_fake_actions.md  plan_md_action_cookbook_python.json  plan_md_action_cookbook_python.md  plan_md_contract.json  plan_md_contract.md  python_cli_hello_world_golden_path.json  python_cli_hello_world_golden_path.md  relative_paths_and_snapshot_gate.json  relative_paths_and_snapshot_gate.md  repair_loop_hygiene.json  repair_loop_hygiene.md  small_llm_build_to_code.json  small_llm_build_to_code.md  unified_diff_hunks.json  unified_diff_hunks.md  verify_kinds.json  verify_kinds.md  windows_run_verify_cheatsheet.json  windows_run_verify_cheatsheet.md
bridge/: status.json
config/: settings.json
config/prompts/: builder.md  builder_reference_json.md
handshake-templates/chatty-cog/: README.md
handshake-templates/chatty-edu/: README.md
runtime/: llama_cli_caps.json  policy.json  runtime.json  sanitizer_failures.jsonl  sanitizer_failures_summary.md  sanitizer_rule_proposals.json  sanitizer_rules.json
runtime/anchors/: job1.json  (+22 more)
scripts/: fetch_llama_cpp_windows.ps1  package.ps1
(+407 files in other folders)
