[workspace]
members = [
    "chattyfactory_core",
    "chattyfactory_gui",
]
# Generated projects and runtime artifacts live under the repo root but must not be
# treated as nested workspace members when users run `cargo` inside them.
exclude = [
    "output/*",
    "runtime/*",
]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["ChattyFactory"]
license = "AGPL-3.0-only"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread","macros","fs","sync","time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
parking_lot = "0.12"
regex = "1"
base64 = "0.22"

